Fix "more link" wrapping bullcrap on the dashboard

--- a/app/stylesheets/redesign/_css/spoonfeed.scss
+++ b/app/stylesheets/redesign/_css/spoonfeed.scss
@@ -1785,6 +1785,8 @@ p.search_filter_hint {
 	.user_comment {
 		font-size: 13px;
 		line-height: 20px;
+		margin-left: 160px;
+		padding: 0px 0px 10px;
 	}
 	.avatar {
 		float: left;
